# pixakit

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
apps/pixakit.ui/: package.json  pnpm-lock.yaml
apps/pixakit.ui/src/layouts/: BlogPost.astro
apps/pixakit.ui/src/pages/: index.astro
apps/pixakit.ui/src/pages/blog/: index.astro
docs/postman/: Pixakit.postman_collection.json
src/: app_state.rs  main.rs
src/providers/: mod.rs
src/providers/amazon/: get_image.rs  mod.rs  resize.rs  router.rs
src/providers/azure/: get_images.rs  mod.rs  router.rs  upload.rs
src/providers/googlecloud/: get_image.rs  mod.rs  resize.rs  router.rs
src/providers/ondisk/: fs.rs  get_image.rs  init.rs  mod.rs  resize.rs  router.rs  upload.rs
src/static_files/: fonts.rs  hoisted.rs  mod.rs  router.rs
