[package]
name = "pixakit"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
magick_rust = "1.0.0"
ntex = {version="2.0.3", features = ["tokio"]}
ntex-cors = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
