[package]
name = "pixakit"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
google-cloud-storage = "0.20.0"
magick_rust = "1.0.0"
mime = "0.3.17"
mime_guess = "2.0.5"
moka = { version = "0.12.7", features = ["future"] }
ntex = {version="2.0.3", features = ["tokio"]}
ntex-bytes = "0.1.27"
ntex-cors = "2.0.0"
ntex-files = "2.0.0"
ntex-multipart = "2.0.0"
ntex-util = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
